add resendotp docs
