# util/json_response.go
@@ -2,31 +2,39 @@ package util
 
 type ApiResponseData = any
 
-type SuccessResponse[K ApiResponseData] struct {
+type SuccessResponseWithData[K ApiResponseData] struct {
 	Message string `json:"message"`
 	Data    K      `json:"data"`
 }
+type SuccessResponse struct {
+	Message string `json:"message"`
+}
 
 type ErrorResponse struct {
-	Message string  `json:"message"`
+	Message string   `json:"message"`
 	Errors  []string `json:"errors"`
 }
 
-func SuccessMessage[K ApiResponseData](msg string, data K) SuccessResponse[K] {
-	return SuccessResponse[K]{
-
+func NewSuccessResponseWithData[K ApiResponseData](msg string, data K) SuccessResponseWithData[K] {
+	return SuccessResponseWithData[K]{
 		Message: msg,
 		Data:    data,
 	}
 }
 
+func NewSuccessResponse(msg string) SuccessResponse {
+	return SuccessResponse{
+		Message: msg,
+	}
+}
+
 func errorMessage(msg string, errors []error) ErrorResponse {
 	errStrings := make([]string, len(errors))
-	for t:= range errors {
+	for t := range errors {
 		errStrings[t] = errors[t].Error()
 	}
 	return ErrorResponse{
 		Message: msg,
-		Errors: errStrings,
+		Errors:  errStrings,
 	}
 }
